cloudformation/stg-base-cfn-sk.json
{
  "AWSTemplateFormatVersion":"2010-09-09",
  "Description":"Template of CRM application for staging environment.",
  "Metadata":{
    "Product":{"Description":"CRM Application"},
    "Environment":{"Description":"STG"}
  },
  "Parameters":{
    "STGVPCCIDR":{
      "Type":"String",
      "Default":"10.2.0.0/16",
      "Description":"Enter CRM STG VPC network range."
    },
    "STGSTTBKTPrefix":{
      "Type":"String",
      "Description":"Enter CRM STG S3 STT BKT prefix."
    },
    "STGIAMGroupName":{
      "Type":"String",
      "Description":"Enter IAM group name."
    },
    "STGIAMUserName":{
      "Type":"String",
      "Description":"Enter IAM user name."
    },
    "STGIAMUserPassword":{
      "NoEcho":"true",
      "Type":"String",
      "Description":"Enter IAM user password."
    }
  },
  "Resources":{
    "STGIAMGroup":{
      "Type":"AWS::IAM::Group",
      "Properties":{
        "GroupName":{"Ref":"STGIAMGroupName"},
        "ManagedPolicyArns":[
          "arn:aws:iam::aws:policy/AWSCodeCommitFullAccess"
        ]
      }
    },
    "STGIAMUser":{
      "Type":"AWS::IAM::User",
      "DependsOn":["STGIAMGroup"],
      "Properties":{
        "UserName":{"Ref":"STGIAMUserName"},
        "Groups":[{"Ref":"STGIAMGroup"}],
        "LoginProfile":{
          "Password":{"Ref":"STGIAMUserPassword"},
          "PasswordResetRequired":false
        },
        "Tags":[
          {"Key":"Name","Value":"CRM-STG-IAM-User"},
          {"Key":"Environment","Value":"STG"},
          {"Key":"Region","Value":"us-west-2"},
          {"Key":"Product","Value":"CRM"}
        ]
      }
    },
    "STGIAMUserAccessKey":{
      "Type":"AWS::IAM::AccessKey",
      "DependsOn":["STGIAMGroup","STGIAMUser"],
      "Properties":{
        "UserName":{"Ref":"STGIAMUserName"}
      }
    },
    "STGIAMManagedPolicy":{
      "Type":"AWS::IAM::ManagedPolicy",
      "DependsOn":["STGIAMGroup","STGIAMUser"],
      "Properties":{
        "Groups":[{"Ref":"STGIAMGroup"}],
        "PolicyDocument":{
          "Version":"2012-10-17",
          "Statement":[
            {
              "Sid":"001",
              "Effect":"Allow",
              "Action":[
                  "s3:PutObject",
                  "s3:ListBucket",
                  "s3:DeleteObject"
              ],
              "Resource":[
                {"Fn::Join":["",["arn:aws:s3:::",{"Ref":"STGSTTBKTPrefix"},"-stg-stt-bkt*"]]},
                {"Fn::Join":["",["arn:aws:s3:::",{"Ref":"STGSTTBKTPrefix"},"-stg-stt-bkt/*"]]}
              ]
            }
          ]
        },
        "ManagedPolicyName":"CRM-STG-S3-PLCY"
      }
    },
    "STGIAMRole":{
      "Type":"AWS::IAM::Role",
      "Properties":{
        "Description":"Allows EC2 instances to call AWS services on your behalf.",
        "AssumeRolePolicyDocument":{
          "Version":"2012-10-17",
          "Statement":[
            {
              "Effect":"Allow",
              "Principal":{
                "Service":"ec2.amazonaws.com"
              },
              "Action":"sts:AssumeRole"
            }
          ]
        },
        "ManagedPolicyArns":[
          "arn:aws:iam::aws:policy/AmazonS3FullAccess",
          "arn:aws:iam::aws:policy/AWSCodeCommitFullAccess",
          "arn:aws:iam::aws:policy/AWSCodeDeployFullAccess",
          "arn:aws:iam::aws:policy/AmazonSSMFullAccess"
        ],
        "RoleName":"CRM-STG-EC2-RL",
        "Tags":[
          {"Key":"Name","Value":"CRM-STG-IAM-Role"},
          {"Key":"Environment","Value":"STG"},
          {"Key":"Region","Value":"us-west-2"},
          {"Key":"Product","Value":"CRM"}
        ]
      }
    },
    "STGVPC":{
      "Type":"AWS::EC2::VPC",
      "Properties":{
        "CidrBlock":{"Ref":"STGVPCCIDR"},
        "EnableDnsSupport":true,
        "EnableDnsHostnames":true,
        "InstanceTenancy":"default",
        "Tags":[
          {"Key":"Name","Value":"CRM-STG-VPC"},
          {"Key":"Environment","Value":"STG"},
          {"Key":"Region","Value":"us-west-2"},
          {"Key":"Product","Value":"CRM"}
        ]
      }
    },
    "STGIG":{
      "Type":"AWS::EC2::InternetGateway",
      "DependsOn":["STGVPC"],
      "Properties":{
        "Tags":[
          {"Key":"Name","Value":"CRM-STG-IG"},
          {"Key":"Environment","Value":"STG"},
          {"Key":"Region","Value":"us-west-2"},
          {"Key":"Product","Value":"CRM"}
        ]
      }
    },
    "STGIGAttach":{
      "Type":"AWS::EC2::VPCGatewayAttachment",
      "DependsOn":["STGVPC","STGIG"],
      "Properties":{
        "VpcId":{"Ref":"STGVPC"},
        "InternetGatewayId":{"Ref":"STGIG"}
      }
    },
    "STGRTTPUB":{
      "Type":"AWS::EC2::RouteTable",
      "DependsOn":["STGVPC"],
      "Properties":{
        "Tags":[
          {"Key":"Name","Value":"CRM-STG-RTT-PUB"},
          {"Key":"Environment","Value":"STG"},
          {"Key":"Region","Value":"us-west-2"},
          {"Key":"Product","Value":"CRM"}
        ],
        "VpcId":{"Ref":"STGVPC"}
      }
    },
    "STGRTTPUBRoute":{
      "Type":"AWS::EC2::Route",
      "DependsOn":["STGVPC","STGRTTPUB"],
      "Properties":{
        "DestinationCidrBlock":"0.0.0.0/0",
        "GatewayId":{"Ref":"STGIG"},
        "RouteTableId":{"Ref":"STGRTTPUB"}
      }
    },
    "STGRTTPVT":{
      "Type":"AWS::EC2::RouteTable",
      "DependsOn":["STGVPC"],
      "Properties":{
        "Tags":[
          {"Key":"Name","Value":"CRM-STG-PVT-RTT"},
          {"Key":"Environment","Value":"STG"},
          {"Key":"Region","Value":"us-west-2"},
          {"Key":"Product","Value":"CRM"}
        ],
        "VpcId":{"Ref":"STGVPC"}
      }
    },
    "STGAppSN1":{
      "Type":"AWS::EC2::Subnet",
      "DependsOn":["STGVPC"],
      "Properties":{
        "AvailabilityZone":"us-west-2a",
        "CidrBlock":"10.2.1.0/24",
        "Tags":[
          {"Key":"Name","Value":"CRM-STG-App-SN-1"},
          {"Key":"Environment","Value":"STG"},
          {"Key":"Region","Value":"us-west-2"},
          {"Key":"Product","Value":"CRM"}
        ],
        "VpcId":{"Ref":"STGVPC"}
      }
    },
    "STGAppSN1PVTRTTAssoc":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "DependsOn":["STGVPC","STGRTTPVT"],
      "Properties":{
        "RouteTableId":{"Ref":"STGRTTPVT"},
        "SubnetId":{"Ref":"STGAppSN1"}
      }
    },
    "STGAppSN2":{
      "Type":"AWS::EC2::Subnet",
      "DependsOn":["STGVPC"],
      "Properties":{
        "AvailabilityZone":"us-west-2b",
        "CidrBlock":"10.2.2.0/24",
        "Tags":[
          {"Key":"Name","Value":"CRM-STG-App-SN-2"},
          {"Key":"Environment","Value":"STG"},
          {"Key":"Region","Value":"us-west-2"},
          {"Key":"Product","Value":"CRM"}
        ],
        "VpcId":{"Ref":"STGVPC"}
      }
    },
    "STGAppSN2PVTRTTAssoc":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "DependsOn":["STGVPC","STGRTTPVT"],
      "Properties":{
        "RouteTableId":{"Ref":"STGRTTPVT"},
        "SubnetId":{"Ref":"STGAppSN2"}
      }
    },
    "STGRedisSN1":{
      "Type":"AWS::EC2::Subnet",
      "DependsOn":["STGVPC"],
      "Properties":{
        "AvailabilityZone":"us-west-2a",
        "CidrBlock":"10.2.3.0/24",
        "Tags":[
          {"Key":"Name","Value":"CRM-STG-Redis-SN-1"},
          {"Key":"Environment","Value":"STG"},
          {"Key":"Region","Value":"us-west-2"},
          {"Key":"Product","Value":"CRM"}
        ],
        "VpcId":{"Ref":"STGVPC"}
      }
    },
    "STGRedisSN1PVTRTTAssoc":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "DependsOn":["STGVPC","STGRTTPVT"],
      "Properties":{
        "RouteTableId":{"Ref":"STGRTTPVT"},
        "SubnetId":{"Ref":"STGRedisSN1"}
      }
    },
    "STGRedisSN2":{
      "Type":"AWS::EC2::Subnet",
      "DependsOn":["STGVPC"],
      "Properties":{
        "AvailabilityZone":"us-west-2b",
        "CidrBlock":"10.2.4.0/24",
        "Tags":[
          {"Key":"Name","Value":"CRM-STG-Redis-SN-2"},
          {"Key":"Environment","Value":"STG"},
          {"Key":"Region","Value":"us-west-2"},
          {"Key":"Product","Value":"CRM"}
        ],
        "VpcId":{"Ref":"STGVPC"}
      }
    },
    "STGRedisSN2PVTRTTAssoc":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "DependsOn":["STGVPC","STGRTTPVT"],
      "Properties":{
        "RouteTableId":{"Ref":"STGRTTPVT"},
        "SubnetId":{"Ref":"STGRedisSN2"}
      }
    },
    "STGNATSN1":{
      "Type":"AWS::EC2::Subnet",
      "DependsOn":["STGVPC"],
      "Properties":{
        "AvailabilityZone":"us-west-2a",
        "CidrBlock":"10.2.5.0/24",
        "Tags":[
          {"Key":"Name","Value":"CRM-STG-NAT-SN-1"},
          {"Key":"Environment","Value":"STG"},
          {"Key":"Region","Value":"us-west-2"},
          {"Key":"Product","Value":"CRM"}
        ],
        "VpcId":{"Ref":"STGVPC"}
      }
    },
    "STGNATSN1PUBRTTAssoc":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "DependsOn":["STGVPC","STGRTTPUB"],
      "Properties":{
        "RouteTableId":{"Ref":"STGRTTPUB"},
        "SubnetId":{"Ref":"STGNATSN1"}
      }
    },
    "STGNATSN2":{
      "Type":"AWS::EC2::Subnet",
      "DependsOn":["STGVPC"],
      "Properties":{
        "AvailabilityZone":"us-west-2b",
        "CidrBlock":"10.2.6.0/24",
        "Tags":[
          {"Key":"Name","Value":"CRM-STG-NAT-SN-2"},
          {"Key":"Environment","Value":"STG"},
          {"Key":"Region","Value":"us-west-2"},
          {"Key":"Product","Value":"CRM"}
        ],
        "VpcId":{"Ref":"STGVPC"}
      }
    },
    "STGNATSN2PUBRTTAssoc":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "DependsOn":["STGVPC","STGRTTPUB"],
      "Properties":{
        "RouteTableId":{"Ref":"STGRTTPUB"},
        "SubnetId":{"Ref":"STGNATSN2"}
      }
    },
    "STGLBSN1":{
      "Type":"AWS::EC2::Subnet",
      "DependsOn":["STGVPC"],
      "Properties":{
        "AvailabilityZone":"us-west-2a",
        "CidrBlock":"10.2.7.0/24",
        "Tags":[
          {"Key":"Name","Value":"CRM-STG-LB-SN-1"},
          {"Key":"Environment","Value":"STG"},
          {"Key":"Region","Value":"us-west-2"},
          {"Key":"Product","Value":"CRM"}
        ],
        "VpcId":{"Ref":"STGVPC"}
      }
    },
    "STGLBSN1PUBRTTAssoc":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "DependsOn":["STGVPC","STGRTTPUB"],
      "Properties":{
        "RouteTableId":{"Ref":"STGRTTPUB"},
        "SubnetId":{"Ref":"STGLBSN1"}
      }
    },
    "STGLBSN2":{
      "Type":"AWS::EC2::Subnet",
      "DependsOn":["STGVPC"],
      "Properties":{
        "AvailabilityZone":"us-west-2b",
        "CidrBlock":"10.2.8.0/24",
        "Tags":[
          {"Key":"Name","Value":"CRM-STG-LB-SN-2"},
          {"Key":"Environment","Value":"STG"},
          {"Key":"Region","Value":"us-west-2"},
          {"Key":"Product","Value":"CRM"}
        ],
        "VpcId":{"Ref":"STGVPC"}
      }
    },
    "STGLBSN2PUBRTTAssoc":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "DependsOn":["STGVPC","STGRTTPUB"],
      "Properties":{
        "RouteTableId":{"Ref":"STGRTTPUB"},
        "SubnetId":{"Ref":"STGLBSN2"}
      }
    },
    "STGNACLEntry":{
      "Type":"AWS::EC2::NetworkAclEntry",
      "DependsOn":["STGVPC"],
      "Properties":{
        "CidrBlock":"54.201.240.247/32",
        "NetworkAclId":{"Fn::GetAtt": ["STGVPC","DefaultNetworkAcl"]},
        "Protocol":"-1",
        "RuleAction":"deny",
        "RuleNumber":30
      }
    },
    "STGNATSG":{
      "Type":"AWS::EC2::SecurityGroup",
      "DependsOn":["STGVPC"],
      "Properties":{
        "GroupDescription":"CRM STG NAT security group.",
        "GroupName":"CRM-STG-NAT-SG",
        "SecurityGroupIngress":[
          {"IpProtocol":"-1","CidrIp":{"Ref":"STGVPCCIDR"}},
          {"IpProtocol":"tcp","FromPort":22,"ToPort":22,"CidrIp":"0.0.0.0/0"}
        ],
        "SecurityGroupEgress":[
          {"IpProtocol":"-1","CidrIp":"0.0.0.0/0"}
        ],
        "Tags":[
          {"Key":"Name","Value":"CRM-STG-NAT-SG"},
          {"Key":"Environment","Value":"STG"},
          {"Key":"Region","Value":"us-west-2"},
          {"Key":"Product","Value":"CRM"}
        ],
        "VpcId":{"Ref":"STGVPC"}
      }
    },
    "STGLBSG":{
      "Type":"AWS::EC2::SecurityGroup",
      "DependsOn":["STGVPC"],
      "Properties":{
        "GroupDescription":"CRM STG LB security group.",
        "GroupName":"CRM-STG-LB-SG",
        "SecurityGroupIngress":[
          {"IpProtocol":"tcp","FromPort":80,"ToPort":80,"CidrIp":"0.0.0.0/0"},
          {"IpProtocol":"tcp","FromPort":5000,"ToPort":5000,"CidrIp":"0.0.0.0/0"}
        ],
        "SecurityGroupEgress":[
          {"IpProtocol":"-1","CidrIp":"0.0.0.0/0"}
        ],
        "Tags":[
          {"Key":"Name","Value":"CRM-STG-LB-SG"},
          {"Key":"Environment","Value":"STG"},
          {"Key":"Region","Value":"us-west-2"},
          {"Key":"Product","Value":"CRM"}
        ],
        "VpcId":{"Ref":"STGVPC"}
      }
    },
    "STGAppSG":{
      "Type":"AWS::EC2::SecurityGroup",
      "DependsOn":["STGVPC","STGNATSG","STGLBSG"],
      "Properties":{
        "GroupDescription":"CRM STG App security group.",
        "GroupName":"CRM-STG-App-SG",
        "SecurityGroupIngress":[
          {"IpProtocol":"tcp","FromPort":22,"ToPort":22,"SourceSecurityGroupId":{"Ref":"STGNATSG"}},
          {"IpProtocol":"tcp","FromPort":80,"ToPort":80,"SourceSecurityGroupId":{"Ref":"STGLBSG"}},
          {"IpProtocol":"tcp","FromPort":5000,"ToPort":5000,"SourceSecurityGroupId":{"Ref":"STGLBSG"}}
        ],
        "SecurityGroupEgress":[
          {"IpProtocol":"-1","CidrIp":"0.0.0.0/0"}
        ],
        "Tags":[
          {"Key":"Name","Value":"CRM-STG-App-SG"},
          {"Key":"Environment","Value":"STG"},
          {"Key":"Region","Value":"us-west-2"},
          {"Key":"Product","Value":"CRM"}
        ],
        "VpcId":{"Ref":"STGVPC"}
      }
    },
    "STGRedisSG":{
      "Type":"AWS::EC2::SecurityGroup",
      "DependsOn":["STGVPC","STGNATSG","STGAppSG"],
      "Properties":{
        "GroupDescription":"CRM STG App security group.",
        "GroupName":"CRM-STG-Redis-SG",
        "SecurityGroupIngress":[
          {"IpProtocol":"tcp","FromPort":22,"ToPort":22,"SourceSecurityGroupId":{"Ref":"STGNATSG"}},
          {"IpProtocol":"tcp","FromPort":6379,"ToPort":6379,"SourceSecurityGroupId":{"Ref":"STGAppSG"}}
        ],
        "SecurityGroupEgress":[
          {"IpProtocol":"-1","CidrIp":"0.0.0.0/0"}
        ],
        "Tags":[
          {"Key":"Name","Value":"CRM-STG-Redis-SG"},
          {"Key":"Environment","Value":"STG"},
          {"Key":"Region","Value":"us-west-2"},
          {"Key":"Product","Value":"CRM"}
        ],
        "VpcId":{"Ref":"STGVPC"}
      }
    },
    "STGVPCS3GWEndpoint":{
      "Type":"AWS::EC2::VPCEndpoint",
      "DependsOn":["STGVPC","STGRTTPVT"],
      "Properties":{
        "RouteTableIds":[{"Ref":"STGRTTPVT"}],
        "ServiceName":{"Fn::Join":["",["com.amazonaws.",{"Ref":"AWS::Region"},".s3"]]},
        "VpcEndpointType":"Gateway",
        "VpcId":{"Ref":"STGVPC"}
      }
    },
    "STGS3STTBKT":{
      "Type":"AWS::S3::Bucket",
      "Properties":{
        "AccessControl":"Private",
        "BucketEncryption":{
          "ServerSideEncryptionConfiguration":[
            {"ServerSideEncryptionByDefault":{"SSEAlgorithm":"AES256"}}
          ]
        },
        "BucketName":{"Fn::Join":["",[{"Ref":"STGSTTBKTPrefix"},"-stg-stt-bkt"]]},
        "PublicAccessBlockConfiguration":{
          "BlockPublicAcls":true,
          "BlockPublicPolicy":true,
          "IgnorePublicAcls":true,
          "RestrictPublicBuckets":true
        },
        "CorsConfiguration":{
          "CorsRules":[
            {
              "Id":1,
              "AllowedHeaders":["*"],
              "AllowedMethods":["GET","HEAD"],
              "AllowedOrigins":["*"],
              "ExposedHeaders":[],
              "MaxAge":86400
            }
          ]
        },
        "Tags":[
          {"Key":"Name","Value":"CRM-STG-STT-BKT"},
          {"Key":"Environment","Value":"STG"},
          {"Key":"Region","Value":"us-west-2"},
          {"Key":"Product","Value":"CRM"}
        ]
      }
    },
    "STGCFNOAI":{
      "Type":"AWS::CloudFront::CloudFrontOriginAccessIdentity",
      "Properties":{
        "CloudFrontOriginAccessIdentityConfig":{
          "Comment":"Origin Access Identity for CRM STG Static."
        }
      }
    },
    "STGS3STTBKTPolicy":{
      "Type":"AWS::S3::BucketPolicy",
      "DependsOn":["STGS3STTBKT","STGCFNOAI"],
      "Properties":{
        "Bucket":{"Ref":"STGS3STTBKT"},
        "PolicyDocument":{
          "Statement":[
            {
              "Sid": "1",
              "Effect": "Allow",
              "Action":["s3:GetObject"],
              "Principal":{
                "CanonicalUser":{"Fn::GetAtt": ["STGCFNOAI","S3CanonicalUserId"]}
              },
              "Resource":{"Fn::Join":["",["arn:aws:s3:::",{"Ref":"STGSTTBKTPrefix"},"-stg-stt-bkt/*"]]},
            }
          ]
        }
      }
    },
    "STGCFNDTN":{
      "Type":"AWS::CloudFront::Distribution",
      "DependsOn":["STGS3STTBKT","STGCFNOAI","STGS3STTBKTPolicy"],
      "Properties":{
        "DistributionConfig":{
          "Comment":"Distribution for CRM STG Static.",
          "Origins":[
            {
              "DomainName":{"Fn::Join":["",[{"Ref":"STGSTTBKTPrefix"},"-stg-stt-bkt.s3.amazonaws.com"]]},
              "Id":"STGS3Origin",
              "S3OriginConfig":{
                "OriginAccessIdentity":{
                  "Fn::Join":["/",["origin-access-identity","cloudfront",{"Ref":"STGCFNOAI"}]]
                }
              }
            }
          ],
          "DefaultCacheBehavior":{
            "AllowedMethods":["GET","HEAD"],
            "CachedMethods":["GET","HEAD"],
            "Compress":false,
            "DefaultTTL":86400,
            "MaxTTL" :31536000,
            "MinTTL":0,
            "SmoothStreaming":false,
            "TargetOriginId":"STGS3Origin",
            "ViewerProtocolPolicy":"allow-all",
            "ForwardedValues":{
              "QueryString":false,
              "Cookies":{"Forward":"none"},
              "Headers":["Origin","Access-Control-Request-Headers","Access-Control-Request-Method"]
            }
          },
          "Enabled":true,
          "HttpVersion":"http2",
          "IPV6Enabled":false,
          "PriceClass":"PriceClass_200"
        },
        "Tags":[
          {"Key":"Name","Value":"CRM-STG-CDN-STT-BKT"},
          {"Key":"Environment","Value":"STG"},
          {"Key":"Region","Value":"us-west-2"},
          {"Key":"Product","Value":"CRM"}
        ]
      }
    }
  },
  "Outputs":{
    "STGIAMUserAccessKeyID":{
      "Value":{"Ref":"STGIAMUserAccessKey"}
    },
    "STGIAMUserSecretAccessKey":{
      "Value":{"Fn::GetAtt":["STGIAMUserAccessKey","SecretAccessKey"]}
    },
    "STGCFNDTNDomainName":{
      "Value":{"Fn::GetAtt":["STGCFNDTN","DomainName"]}
    }
  }
}
