cloudformation/stg-cfn-base-sk.json
{
  "AWSTemplateFormatVersion":"2010-09-09",
  "Description":"Base AWS Resources for CRM STG.",
  "Metadata":{
    "ENV":{"Description":"STG"},
    "Product":{"Description":"CRM"}
  },
  "Parameters":{
    "ENV":{
      "Type":"String",
      "Description":"CRM Environment."
    },
    "STGVPCCIDRBLK":{
      "Type":"String",
      "Description":"STG VPC CIDR Block."
    },
    "STGS3STTBKTPFX":{
      "Type":"String",
      "Description":"STG S3 Static Bucket Prefix."
    },
    "STGEC2KeyPair":{
      "Type":"String",
      "Description":"STG EC2 Key Pair."
    }
  },
  "Mappings":{
    "VPCSNCONF":{
      "AppSN1":{"AZ":"us-west-2a","CIDR":"10.2.1.0/24"},
      "AppSN2":{"AZ":"us-west-2b","CIDR":"10.2.2.0/24"},
      "RedisSN1":{"AZ":"us-west-2a","CIDR":"10.2.3.0/24"},
      "RedisSN2":{"AZ":"us-west-2b","CIDR":"10.2.4.0/24"},
      "NATSN1":{"AZ":"us-west-2a","CIDR":"10.2.5.0/24"},
      "NATSN2":{"AZ":"us-west-2b","CIDR":"10.2.6.0/24"},
      "LBSN1":{"AZ":"us-west-2a","CIDR":"10.2.7.0/24"},
      "LBSN2":{"AZ":"us-west-2b","CIDR":"10.2.8.0/24"}
    },
    "EC2AMICONF":{
      "App":{"Id":"ami-0a36eb8fadc976275"},
      "Redis":{"Id":"ami-0a36eb8fadc976275"},
      "NAT":{"Id":"ami-009816cdbb1e74ceb"}
    }
  },
  "Conditions":{
    "CheckENV":{"Fn::Equals":[{"Ref":"ENV"},"STG"]}
  },
  "Resources":{
    "STGIAMEC2RL":{
      "Type":"AWS::IAM::Role",
      "Condition":"CheckENV",
      "Properties":{
        "AssumeRolePolicyDocument":{
          "Version":"2012-10-17",
          "Statement":[
            {
              "Effect":"Allow",
              "Principal":{
                "Service":"ec2.amazonaws.com"
              },
              "Action":"sts:AssumeRole"
            }
          ]
        },
        "ManagedPolicyArns":[
          "arn:aws:iam::aws:policy/AmazonS3FullAccess"
        ],
        "Path":"/",
        "RoleName":"STG-IAM-EC2-RL",
        "Tags":[
          {"Key":"Name","Value":"STG-IAM-EC2-RL"},
          {"Key":"Environment","Value":"STG"},
          {"Key":"Region","Value":"us-west-2"},
          {"Key":"Product","Value":"CRM"}
        ]
      }
    },
    "STGIAMEC2RLINSTPF":{
      "Type":"AWS::IAM::InstanceProfile",
      "Condition":"CheckENV",
      "DependsOn":["STGIAMEC2RL"],
      "Properties":{
        "Path":"/",
        "Roles":[{"Ref":"STGIAMEC2RL"}]
      }
    },
    "STGVPC":{
      "Type":"AWS::EC2::VPC",
      "Condition":"CheckENV",
      "Properties":{
        "CidrBlock":{"Ref":"STGVPCCIDRBLK"},
        "EnableDnsSupport":true,
        "EnableDnsHostnames":true,
        "InstanceTenancy":"default",
        "Tags":[
          {"Key":"Name","Value":"STG-VPC"},
          {"Key":"Environment","Value":"STG"},
          {"Key":"Region","Value":"us-west-2"},
          {"Key":"Product","Value":"CRM"}
        ]
      }
    },
    "STGVPCIG":{
      "Type":"AWS::EC2::InternetGateway",
      "Condition":"CheckENV",
      "DependsOn":["STGVPC"],
      "Properties":{
        "Tags":[
          {"Key":"Name","Value":"STG-VPC-IG"},
          {"Key":"Environment","Value":"STG"},
          {"Key":"Region","Value":"us-west-2"},
          {"Key":"Product","Value":"CRM"}
        ]
      }
    },
    "STGVPCIGATH":{
      "Type":"AWS::EC2::VPCGatewayAttachment",
      "Condition":"CheckENV",
      "DependsOn":["STGVPC","STGVPCIG"],
      "Properties":{
        "VpcId":{"Ref":"STGVPC"},
        "InternetGatewayId":{"Ref":"STGVPCIG"}
      }
    },
    "STGVPCRTTPUB":{
      "Type":"AWS::EC2::RouteTable",
      "Condition":"CheckENV",
      "DependsOn":["STGVPC"],
      "Properties":{
        "VpcId":{"Ref":"STGVPC"},
        "Tags":[
          {"Key":"Name","Value":"STG-VPC-RTT-PUB"},
          {"Key":"Environment","Value":"STG"},
          {"Key":"Region","Value":"us-west-2"},
          {"Key":"Product","Value":"CRM"}
        ]
      }
    },
    "STGVPCRTTPUBRT1":{
      "Type":"AWS::EC2::Route",
      "Condition":"CheckENV",
      "DependsOn":["STGVPC","STGVPCIG","STGVPCRTTPUB"],
      "Properties":{
        "RouteTableId":{"Ref":"STGVPCRTTPUB"},
        "DestinationCidrBlock":"0.0.0.0/0",
        "GatewayId":{"Ref":"STGVPCIG"}
      }
    },
    "STGVPCRTTPVT":{
      "Type":"AWS::EC2::RouteTable",
      "Condition":"CheckENV",
      "DependsOn":["STGVPC"],
      "Properties":{
        "VpcId":{"Ref":"STGVPC"},
        "Tags":[
          {"Key":"Name","Value":"STG-VPC-RTT-PVT"},
          {"Key":"Environment","Value":"STG"},
          {"Key":"Region","Value":"us-west-2"},
          {"Key":"Product","Value":"CRM"}
        ]
      }
    },
    "STGVPCRTTPVTRT1":{
      "Type":"AWS::EC2::Route",
      "Condition":"CheckENV",
      "DependsOn":["STGVPC","STGVPCRTTPVT","STGEC2NATSR1"],
      "Properties":{
        "RouteTableId":{"Ref":"STGVPCRTTPVT"},
        "DestinationCidrBlock":"0.0.0.0/0",
        "InstanceId":{"Ref":"STGEC2NATSR1"}
      }
    },
    "STGVPCAppSN1":{
      "Type":"AWS::EC2::Subnet",
      "Condition":"CheckENV",
      "DependsOn":["STGVPC"],
      "Properties":{
        "VpcId":{"Ref":"STGVPC"},
        "CidrBlock":{"Fn::FindInMap":["VPCSNCONF","AppSN1","CIDR"]},
        "AvailabilityZone":{"Fn::FindInMap":["VPCSNCONF","AppSN1","AZ"]},
        "Tags":[
          {"Key":"Name","Value":"STG-VPC-App-SN-1"},
          {"Key":"Environment","Value":"STG"},
          {"Key":"Region","Value":"us-west-2"},
          {"Key":"Product","Value":"CRM"}
        ]
      }
    },
    "STGVPCAppSN1RTTASS":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "Condition":"CheckENV",
      "DependsOn":["STGVPC","STGVPCAppSN1","STGVPCRTTPVT"],
      "Properties":{
        "RouteTableId":{"Ref":"STGVPCRTTPVT"},
        "SubnetId":{"Ref":"STGVPCAppSN1"}
      }
    },
    "STGVPCAppSN2":{
      "Type":"AWS::EC2::Subnet",
      "Condition":"CheckENV",
      "DependsOn":["STGVPC"],
      "Properties":{
        "VpcId":{"Ref":"STGVPC"},
        "CidrBlock":{"Fn::FindInMap":["VPCSNCONF","AppSN2","CIDR"]},
        "AvailabilityZone":{"Fn::FindInMap":["VPCSNCONF","AppSN2","AZ"]},
        "Tags":[
          {"Key":"Name","Value":"STG-VPC-App-SN-2"},
          {"Key":"Environment","Value":"STG"},
          {"Key":"Region","Value":"us-west-2"},
          {"Key":"Product","Value":"CRM"}
        ]
      }
    },
    "STGVPCAppSN2RTTASS":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "Condition":"CheckENV",
      "DependsOn":["STGVPC","STGVPCAppSN2","STGVPCRTTPVT"],
      "Properties":{
        "RouteTableId":{"Ref":"STGVPCRTTPVT"},
        "SubnetId":{"Ref":"STGVPCAppSN2"}
      }
    },
    "STGVPCRedisSN1":{
      "Type":"AWS::EC2::Subnet",
      "Condition":"CheckENV",
      "DependsOn":["STGVPC"],
      "Properties":{
        "VpcId":{"Ref":"STGVPC"},
        "CidrBlock":{"Fn::FindInMap":["VPCSNCONF","RedisSN1","CIDR"]},
        "AvailabilityZone":{"Fn::FindInMap":["VPCSNCONF","RedisSN1","AZ"]},
        "Tags":[
          {"Key":"Name","Value":"STG-VPC-Redis-SN-1"},
          {"Key":"Environment","Value":"STG"},
          {"Key":"Region","Value":"us-west-2"},
          {"Key":"Product","Value":"CRM"}
        ]
      }
    },
    "STGVPCRedisSN1RTTASS":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "Condition":"CheckENV",
      "DependsOn":["STGVPC","STGVPCRedisSN1","STGVPCRTTPVT"],
      "Properties":{
        "RouteTableId":{"Ref":"STGVPCRTTPVT"},
        "SubnetId":{"Ref":"STGVPCRedisSN1"}
      }
    },
    "STGVPCRedisSN2":{
      "Type":"AWS::EC2::Subnet",
      "Condition":"CheckENV",
      "DependsOn":["STGVPC"],
      "Properties":{
        "VpcId":{"Ref":"STGVPC"},
        "CidrBlock":{"Fn::FindInMap":["VPCSNCONF","RedisSN2","CIDR"]},
        "AvailabilityZone":{"Fn::FindInMap":["VPCSNCONF","RedisSN2","AZ"]},
        "Tags":[
          {"Key":"Name","Value":"STG-VPC-Redis-SN-2"},
          {"Key":"Environment","Value":"STG"},
          {"Key":"Region","Value":"us-west-2"},
          {"Key":"Product","Value":"CRM"}
        ]
      }
    },
    "STGVPCRedisSN2RTTASS":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "Condition":"CheckENV",
      "DependsOn":["STGVPC","STGVPCRedisSN2","STGVPCRTTPVT"],
      "Properties":{
        "RouteTableId":{"Ref":"STGVPCRTTPVT"},
        "SubnetId":{"Ref":"STGVPCRedisSN2"}
      }
    },
    "STGVPCNATSN1":{
      "Type":"AWS::EC2::Subnet",
      "Condition":"CheckENV",
      "DependsOn":["STGVPC"],
      "Properties":{
        "VpcId":{"Ref":"STGVPC"},
        "CidrBlock":{"Fn::FindInMap":["VPCSNCONF","NATSN1","CIDR"]},
        "AvailabilityZone":{"Fn::FindInMap":["VPCSNCONF","NATSN1","AZ"]},
        "Tags":[
          {"Key":"Name","Value":"STG-VPC-NAT-SN-1"},
          {"Key":"Environment","Value":"STG"},
          {"Key":"Region","Value":"us-west-2"},
          {"Key":"Product","Value":"CRM"}
        ]
      }
    },
    "STGVPCNATSN1RTTASS":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "Condition":"CheckENV",
      "DependsOn":["STGVPC","STGVPCNATSN1","STGVPCRTTPUB"],
      "Properties":{
        "RouteTableId":{"Ref":"STGVPCRTTPUB"},
        "SubnetId":{"Ref":"STGVPCNATSN1"}
      }
    },
    "STGVPCNATSN2":{
      "Type":"AWS::EC2::Subnet",
      "Condition":"CheckENV",
      "DependsOn":["STGVPC"],
      "Properties":{
        "VpcId":{"Ref":"STGVPC"},
        "CidrBlock":{"Fn::FindInMap":["VPCSNCONF","NATSN2","CIDR"]},
        "AvailabilityZone":{"Fn::FindInMap":["VPCSNCONF","NATSN2","AZ"]},
        "Tags":[
          {"Key":"Name","Value":"STG-VPC-NAT-SN-2"},
          {"Key":"Environment","Value":"STG"},
          {"Key":"Region","Value":"us-west-2"},
          {"Key":"Product","Value":"CRM"}
        ]
      }
    },
    "STGVPCNATSN2RTTASS":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "Condition":"CheckENV",
      "DependsOn":["STGVPC","STGVPCNATSN2","STGVPCRTTPUB"],
      "Properties":{
        "RouteTableId":{"Ref":"STGVPCRTTPUB"},
        "SubnetId":{"Ref":"STGVPCNATSN2"}
      }
    },
    "STGVPCLBSN1":{
      "Type":"AWS::EC2::Subnet",
      "Condition":"CheckENV",
      "DependsOn":["STGVPC"],
      "Properties":{
        "VpcId":{"Ref":"STGVPC"},
        "CidrBlock":{"Fn::FindInMap":["VPCSNCONF","LBSN1","CIDR"]},
        "AvailabilityZone":{"Fn::FindInMap":["VPCSNCONF","LBSN1","AZ"]},
        "Tags":[
          {"Key":"Name","Value":"STG-VPC-LB-SN-1"},
          {"Key":"Environment","Value":"STG"},
          {"Key":"Region","Value":"us-west-2"},
          {"Key":"Product","Value":"CRM"}
        ]
      }
    },
    "STGVPCLBSN1RTTASS":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "Condition":"CheckENV",
      "DependsOn":["STGVPC","STGVPCLBSN1","STGVPCRTTPUB"],
      "Properties":{
        "RouteTableId":{"Ref":"STGVPCRTTPUB"},
        "SubnetId":{"Ref":"STGVPCLBSN1"}
      }
    },
    "STGVPCLBSN2":{
      "Type":"AWS::EC2::Subnet",
      "Condition":"CheckENV",
      "DependsOn":["STGVPC"],
      "Properties":{
        "VpcId":{"Ref":"STGVPC"},
        "CidrBlock":{"Fn::FindInMap":["VPCSNCONF","LBSN2","CIDR"]},
        "AvailabilityZone":{"Fn::FindInMap":["VPCSNCONF","LBSN2","AZ"]},
        "Tags":[
          {"Key":"Name","Value":"STG-VPC-LB-SN-2"},
          {"Key":"Environment","Value":"STG"},
          {"Key":"Region","Value":"us-west-2"},
          {"Key":"Product","Value":"CRM"}
        ]
      }
    },
    "STGVPCLBSN2RTTASS":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "Condition":"CheckENV",
      "DependsOn":["STGVPC","STGVPCLBSN2","STGVPCRTTPUB"],
      "Properties":{
        "RouteTableId":{"Ref":"STGVPCRTTPUB"},
        "SubnetId":{"Ref":"STGVPCLBSN2"}
      }
    },
    "STGVPCNATSG":{
      "Type":"AWS::EC2::SecurityGroup",
      "Condition":"CheckENV",
      "DependsOn":["STGVPC"],
      "Properties":{
        "VpcId":{"Ref":"STGVPC"},
        "GroupDescription":"STG VPC NAT Security Group.",
        "GroupName":"STG-VPC-NAT-SG",
        "SecurityGroupIngress":[
          {"IpProtocol":"-1","CidrIp":{"Ref":"STGVPCCIDRBLK"}},
          {"IpProtocol":"tcp","FromPort":22,"ToPort":22,"CidrIp":"0.0.0.0/0"}
        ],
        "SecurityGroupEgress":[
          {"IpProtocol":"-1","CidrIp":"0.0.0.0/0"}
        ],
        "Tags":[
          {"Key":"Name","Value":"STG-VPC-NAT-SG"},
          {"Key":"Environment","Value":"STG"},
          {"Key":"Region","Value":"us-west-2"},
          {"Key":"Product","Value":"CRM"}
        ] 
      }
    },
    "STGVPCLBSG":{
      "Type":"AWS::EC2::SecurityGroup",
      "Condition":"CheckENV",
      "DependsOn":["STGVPC"],
      "Properties":{
        "VpcId":{"Ref":"STGVPC"},
        "GroupDescription":"STG VPC LB Security Group.",
        "GroupName":"STG-VPC-LB-SG",
        "SecurityGroupIngress":[
          {"IpProtocol":"tcp","FromPort":80,"ToPort":80,"CidrIp":"0.0.0.0/0"}
        ],
        "SecurityGroupEgress":[
          {"IpProtocol":"-1","CidrIp":"0.0.0.0/0"}
        ],
        "Tags":[
          {"Key":"Name","Value":"STG-VPC-LB-SG"},
          {"Key":"Environment","Value":"STG"},
          {"Key":"Region","Value":"us-west-2"},
          {"Key":"Product","Value":"CRM"}
        ]
      }
    },
    "STGVPCAppSG":{
      "Type":"AWS::EC2::SecurityGroup",
      "Condition":"CheckENV",
      "DependsOn":["STGVPC","STGVPCNATSG","STGVPCLBSG"],
      "Properties":{
        "VpcId":{"Ref":"STGVPC"},
        "GroupDescription":"STG VPC App Security Group.",
        "GroupName":"STG-VPC-App-SG",
        "SecurityGroupIngress":[
          {"IpProtocol":"tcp","FromPort":22,"ToPort":22,"SourceSecurityGroupId":{"Ref":"STGVPCNATSG"}},
          {"IpProtocol":"tcp","FromPort":5000,"ToPort":5000,"SourceSecurityGroupId":{"Ref":"STGVPCLBSG"}}
        ],
        "SecurityGroupEgress":[
          {"IpProtocol":"-1","CidrIp":"0.0.0.0/0"}
        ],
        "Tags":[
          {"Key":"Name","Value":"STG-VPC-App-SG"},
          {"Key":"Environment","Value":"STG"},
          {"Key":"Region","Value":"us-west-2"},
          {"Key":"Product","Value":"CRM"}
        ]
      }
    },
    "STGVPCRedisSG":{
      "Type":"AWS::EC2::SecurityGroup",
      "Condition":"CheckENV",
      "DependsOn":["STGVPC","STGVPCNATSG","STGVPCAppSG"],
      "Properties":{
        "VpcId":{"Ref":"STGVPC"},
        "GroupDescription":"STG VPC Redis Security Group.",
        "GroupName":"STG-VPC-Redis-SG",
        "SecurityGroupIngress":[
          {"IpProtocol":"tcp","FromPort":22,"ToPort":22,"SourceSecurityGroupId":{"Ref":"STGVPCNATSG"}},
          {"IpProtocol":"tcp","FromPort":6379,"ToPort":6379,"SourceSecurityGroupId":{"Ref":"STGVPCAppSG"}}
        ],
        "SecurityGroupEgress":[
          {"IpProtocol":"-1","CidrIp":"0.0.0.0/0"}
        ],
        "Tags":[
          {"Key":"Name","Value":"STG-VPC-Redis-SG"},
          {"Key":"Environment","Value":"STG"},
          {"Key":"Region","Value":"us-west-2"},
          {"Key":"Product","Value":"CRM"}
        ]
      }
    },
    "STGVPCS3EP":{
      "Type":"AWS::EC2::VPCEndpoint",
      "Condition":"CheckENV",
      "DependsOn":["STGVPC","STGVPCRTTPVT"],
      "Properties":{
        "RouteTableIds":[{"Ref":"STGVPCRTTPVT"}],
        "ServiceName":{"Fn::Join":["",["com.amazonaws.",{"Ref":"AWS::Region"},".s3"]]},
        "VpcEndpointType":"Gateway",
        "VpcId":{"Ref":"STGVPC"}
      }
    },
    "STGS3STTBKT":{
      "Type":"AWS::S3::Bucket",
      "Condition":"CheckENV",
      "Properties":{
        "AccessControl":"Private",
        "BucketEncryption":{
          "ServerSideEncryptionConfiguration":[
            {"ServerSideEncryptionByDefault":{"SSEAlgorithm":"AES256"}}
          ]
        },
        "BucketName":{"Fn::Join":["-",[{"Ref":"STGS3STTBKTPFX"},"stg-s3-stt-bkt"]]},
        "PublicAccessBlockConfiguration":{
          "BlockPublicAcls":true,
          "BlockPublicPolicy":true,
          "IgnorePublicAcls":true,
          "RestrictPublicBuckets":true
        },
        "CorsConfiguration":{
          "CorsRules":[
            {
              "Id":001,
              "AllowedOrigins":["*"],
              "AllowedMethods":["GET","HEAD"],
              "AllowedHeaders":["*"],
              "ExposedHeaders":[],
              "MaxAge":86400
            }
          ]
        },
        "Tags":[
          {"Key":"Name","Value":"STG-S3-STT-BKT"},
          {"Key":"Environment","Value":"STG"},
          {"Key":"Region","Value":"us-west-2"},
          {"Key":"Product","Value":"CRM"}
        ]
      }
    },
    "STGS3STTVPCACSSPT":{
      "Type":"AWS::S3::AccessPoint",
      "Condition":"CheckENV",
      "DependsOn":["STGVPC","STGS3STTBKT"],
      "Properties":{
        "Bucket":{"Fn::Join":["-",[{"Ref":"STGS3STTBKTPFX"},"stg-s3-stt-bkt"]]},
        "Name":"stg-s3-stt-vpc-acss-pt",
        "NetworkOrigin":"VPC",
        "PublicAccessBlockConfiguration":{
          "BlockPublicAcls":true,
          "BlockPublicPolicy":true,
          "IgnorePublicAcls":true,
          "RestrictPublicBuckets":true
        },
        "VpcConfiguration":{
          "VpcId":{"Ref":"STGVPC"}
        }
      }
    },
    "STGS3STTINTACSSPT":{
      "Type":"AWS::S3::AccessPoint",
      "Condition":"CheckENV",
      "DependsOn":["STGVPC","STGS3STTBKT"],
      "Properties":{
        "Bucket":{"Fn::Join":["-",[{"Ref":"STGS3STTBKTPFX"},"stg-s3-stt-bkt"]]},
        "Name":"stg-s3-stt-int-acss-pt",
        "NetworkOrigin":"Internet",
        "Policy":{
          "Version":"2012-10-17",
          "Statement":[
            {
              "Sid":"001",
              "Effect":"Allow",
              "Principal":{
                "AWS":{"Fn::Join":[":",["arn:aws:iam:",{"Ref":"AWS::AccountId"},"user/tuto"]]}
              },
              "Action":[
                "s3:GetObject",
                "s3:ListBucket"
              ],
              "Resource":[
                {"Fn::Join":[":",["arn:aws:s3:us-west-2",{"Ref":"AWS::AccountId"},"accesspoint/stg-s3-stt-int-acss-pt"]]},
                {"Fn::Join":[":",["arn:aws:s3:us-west-2",{"Ref":"AWS::AccountId"},"accesspoint/stg-s3-stt-int-acss-pt/object/*"]]}
              ]
            }
          ]
        },
        "PublicAccessBlockConfiguration":{
          "BlockPublicAcls":true,
          "BlockPublicPolicy":true,
          "IgnorePublicAcls":true,
          "RestrictPublicBuckets":true
        }
      }
    },
    "STGCFSTTOAI":{
      "Type":"AWS::CloudFront::CloudFrontOriginAccessIdentity",
      "Condition":"CheckENV",
      "Properties":{
        "CloudFrontOriginAccessIdentityConfig":{
          "Comment":"STG CloudFront Static Origin Access Identity."
        }
      }
    },
    "STGS3STTBKTPLCY":{
      "Type":"AWS::S3::BucketPolicy",
      "Condition":"CheckENV",
      "DependsOn":["STGS3STTBKT","STGCFSTTOAI"],
      "Properties":{
        "Bucket":{"Ref":"STGS3STTBKT"},
        "PolicyDocument":{
          "Statement":[
            {
              "Sid":001,
              "Effect":"Allow",
              "Principal":{
                "CanonicalUser":{"Fn::GetAtt": ["STGCFSTTOAI","S3CanonicalUserId"]}
              },
              "Action":["s3:GetObject"],
              "Resource":{"Fn::Join":["",["arn:aws:s3:::",{"Fn::Join":["-",[{"Ref":"STGS3STTBKTPFX"},"stg-s3-stt-bkt"]]},"/*"]]}
            }
          ]
        }
      }
    },
    "STGCFSTTDST":{
      "Type":"AWS::CloudFront::Distribution",
      "Condition":"CheckENV",
      "DependsOn":["STGS3STTBKT","STGCFSTTOAI","STGS3STTBKTPLCY"],
      "Properties":{
        "DistributionConfig":{
          "Comment":"STG CloudFront Static Distribution.",
          "Origins":[
            {
              "DomainName":{"Fn::Join":["-",[{"Ref":"STGS3STTBKTPFX"},"stg-s3-stt-bkt.s3.amazonaws.com"]]},
              "Id":{"Fn::Join":["-",["S3",{"Ref":"STGS3STTBKT"}]]},
              "S3OriginConfig":{
                "OriginAccessIdentity":{
                  "Fn::Join":["/",["origin-access-identity","cloudfront",{"Ref":"STGCFSTTOAI"}]]
                }
              }
            }
          ],
          "DefaultCacheBehavior":{
            "AllowedMethods":["GET","HEAD"],
            "CachedMethods":["GET","HEAD"],
            "Compress":false,
            "DefaultTTL":86400,
            "MaxTTL" :31536000,
            "MinTTL":0,
            "SmoothStreaming":false,
            "TargetOriginId":{"Fn::Join":["-",["S3",{"Ref":"STGS3STTBKT"}]]},
            "ViewerProtocolPolicy":"allow-all",
            "ForwardedValues":{
              "QueryString":false,
              "Cookies":{"Forward":"none"},
              "Headers":["Origin","Access-Control-Request-Headers","Access-Control-Request-Method"]
            }
          },
          "Enabled":true,
          "HttpVersion":"http2",
          "IPV6Enabled":false,
          "PriceClass":"PriceClass_All"
        },
        "Tags":[
          {"Key":"Name","Value":"STG-CF-STT-DST"},
          {"Key":"Environment","Value":"STG"},
          {"Key":"Region","Value":"us-west-2"},
          {"Key":"Product","Value":"CRM"}
        ]
      }
    },
    "STGEC2NATSR1":{
      "Type":"AWS::EC2::Instance",
      "Condition":"CheckENV",
      "DependsOn":["STGIAMEC2RLINSTPF","STGVPC","STGVPCNATSN2","STGVPCNATSG"],
      "Properties":{
        "AvailabilityZone":{"Fn::FindInMap":["VPCSNCONF","NATSN2","AZ"]},
        "CreditSpecification":{"CPUCredits":"standard"},
        "DisableApiTermination":false,
        "EbsOptimized":false,
        "IamInstanceProfile":{"Ref":"STGIAMEC2RLINSTPF"},
        "ImageId":{"Fn::FindInMap":["EC2AMICONF","NAT","Id"]},
        "InstanceInitiatedShutdownBehavior":"stop",
        "InstanceType":"t2.micro",
        "KeyName":{"Ref":"STGEC2KeyPair"},
        "NetworkInterfaces":[{
          "AssociatePublicIpAddress":true,
          "DeleteOnTermination":true,
          "DeviceIndex":"0",
          "GroupSet":[{"Ref":"STGVPCNATSG"}],
          "SubnetId":{"Ref":"STGVPCNATSN2"},
          "PrivateIpAddress":"10.2.6.10"
        }],
        "SourceDestCheck":false,
        "Tenancy":"default",
        "Tags":[
          {"Key":"Name","Value":"STG-EC2-NAT-SR-1"},
          {"Key":"Environment","Value":"STG"},
          {"Key":"Region","Value":"us-west-2"},
          {"Key":"Product","Value":"CRM"}
        ]
      }
    }
  },
  "Outputs":{
    "STGCFSTTDSTUrl":{
      "Value":{"Fn::GetAtt":["STGCFSTTDST","DomainName"]}
    }
  }
}
